--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -1,75 +1,87 @@
 <html>
-    <head>
-        <meta charset = "UTF-8">
-        <title>externalStyle.html</title>
-        <link rel = "stylesheet"
-              type = "text/css"
-              href = "./../css/index.css" />
+<head>
+    <meta charset="UTF-8">
+    <title>externalStyle.html</title>
+    <link rel="stylesheet"
+          type="text/css"
+          href="./../css/index.css"/>
 
-        <link rel = "stylesheet"
-              type = "text/css"
-              href = "./../css/table.css" />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script type="text/javascript"
-                src="./../js/index.js">
-        </script>
+    <link rel="stylesheet"
+          type="text/css"
+          href="./../css/table.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript"
+            src="./../js/index.js">
+    </script>
 
-        <!--<script type="text/javascript">
-            function searchPublication() {
-                console.log("I am");
-            }
-        </script>-->
-    </head>
-    <body>
-    <section id="login">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-wrap">
-                        <h1>Search by Author or Paper title/keyword</h1>
-                        <form role="form" action="javascript:;" method="post" id="login-form" autocomplete="off">
-                            <div class="form-group">
-                                <input id="author-radio" type="radio" name="search" value="author">
-                                <input type="text" name="email" id="author" class="form-control text-box" placeholder="Search by Author">
-                            </div>
-                            <div class="form-group">
-                                <input id="paper-radio" type="radio" name="search" value="paper">
-                                <input type="text" name="key" id="paper" class="form-control text-box" placeholder="Search by Paper title/keyword">
-                            </div>
+    <!--<script type="text/javascript">
+        function searchPublication() {
+            console.log("I am");
+        }
+    </script>-->
+</head>
+<body>
 
-                            <input type="button"
-                                   id="btn-login"
-                                   class="btn btn-custom btn-lg btn-block button-custom"
-                                   value="Search"
-                                   onclick="searchPublication()">
-                        </form>
-                        <hr>
-                    </div>
-                </div> <!-- /.col-xs-12 -->
-            </div> <!-- /.row -->
-        </div>
+<div style="width: 100%;">
 
-        <!-- /.container -->
-        <div>
-            <table class="responstable" id="author-table" style="display: none;">
-                <tr>
-                    <th>Author</th>
-                    <th>Affiliation</th>
-                    <th>Homepage URL</th>
-                </tr>
-            </table>
+    <div style="float:left; width: 50%; border-right: 1px solid black; padding-right: 15px">
 
-            <table class="responstable" id="paper-table" style="display: none;">
-                <tr>
-                    <th>Paper</th>
-                    <th>Affiliation</th>
-                    <th>Homepage URL</th>
-                </tr>
-            </table>
-        </div>
-    </section>
+        <section id="login">
+            <!--<div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="form-wrap">-->
+            <h1>Search by Author or Paper title/keyword</h1>
+            <form role="form" action="javascript:;" method="post" id="login-form" autocomplete="off">
+                <div class="form-group">
+                    <input id="author-radio" type="radio" name="search" value="author">
+                    <input type="text" name="email" id="author" class="form-control text-box"
+                           placeholder="Search by Author">
+                </div>
+                <div class="form-group">
+                    <input id="paper-radio" type="radio" name="search" value="paper">
+                    <input type="text" name="key" id="paper" class="form-control text-box"
+                           placeholder="Search by Paper title/keyword">
+                </div>
 
-    </body>
+                <input type="button"
+                       id="btn-login"
+                       class="btn btn-custom btn-lg btn-block button-custom"
+                       value="Search"
+                       onclick="searchPublication()"
+                       align="center">
+            </form>
+            <hr>
+            <!--</div>
+        </div> <!-- /.col-xs-12 -->
+            <!--</div> <!-- /.row -->
+            <!--</div>-->
+
+            <!-- /.container -->
+            <div style="height:50%; overflow:auto;">
+
+                <table class="responstable" id="author-table" style="display: none;" >
+                    <tr>
+                        <th>Authors</th>
+                    </tr>
+                </table>
+
+                <table class="responstable" id="paper-table" style="display: none;">
+                    <tr>
+                        <th>Papers</th>
+                    </tr>
+
+                </table>
+            </div>
+        </section>
+    </div>
+
+    <div style="float:right; padding: 15px">
+
+    </div>
+</div>
+
+</body>
 
 </html>
 
