Also including fusioncharts.js

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -204,9 +204,14 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.4/ui-bootstrap-tpls.min.js"></script>
 
-<script src="./../js/app.js"></script>
+<script type="text/javascript" src="./../js/app.js"></script>
 <script type="text/javascript" src="./../js/service.js"></script>
-<script src="./../js/angular-fusioncharts.min.js"></script>
+<!-- FusionCharts library-->
+<script type="text/javascript" src="./../js/fusioncharts.js"></script>
+<script type="text/javascript" src="./../js/fusioncharts.charts.js"></script>
+
+<!-- Angular plugin -->
+<script type="text/javascript" src="./../js/angular-fusioncharts.min.js"></script>
 
 </body>
 </html>
