--- a/src/main/resources/static/html/fusion.html
+++ b/src/main/resources/static/html/fusion.html
@@ -21,12 +21,13 @@
 <div class="container"  ng-controller="AppController" ng-cloak class="ng-cloak">
     <h1>Hello</h1>
 
-<fusioncharts
-        width="600"
-        height="400"
-        type="column2d"
-        datasource="{{myDataSource}}">
-</fusioncharts>
+    <fusioncharts
+            width= "100%"
+            height= "400"
+            type= "column2d"
+            dataFormat= "json"
+            dataSource= "{{myDataSource}}">
+    </fusioncharts>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
@@ -35,10 +36,14 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.4/ui-bootstrap-tpls.min.js"></script>
 
-<script src="./../js/app.js"></script>
+<script type="text/javascript" src="./../js/app.js"></script>
 <script type="text/javascript" src="./../js/service.js"></script>
-<script src="./../js/angular-fusioncharts.min.js"></script>
+<!-- FusionCharts library-->
+<script type="text/javascript" src="./../js/fusioncharts.js"></script>
+<script type="text/javascript" src="./../js/fusioncharts.charts.js"></script>
 
+<!-- Angular plugin -->
+<script type="text/javascript" src="./../js/angular-fusioncharts.min.js"></script>
 </body>
 
 </html>
