Organised charts js files

--- a/src/main/resources/static/html/fusion.html
+++ b/src/main/resources/static/html/fusion.html
@@ -38,12 +38,12 @@
 <script type="text/javascript" src="./../js/app.js"></script>
 <script type="text/javascript" src="./../js/service.js"></script>
 <!-- FusionCharts library-->
-<script type="text/javascript" src="./../js/fusioncharts.js"></script>
-<script type="text/javascript" src="./../js/fusioncharts.charts.js"></script>
-<script type="text/javascript" src="./../js/fusioncharts.theme.fint.js"></script>
+<script type="text/javascript" src="../js/fusioncharts/fusioncharts.js"></script>
+<script type="text/javascript" src="../js/fusioncharts/fusioncharts.charts.js"></script>
+<script type="text/javascript" src="../js/fusioncharts/fusioncharts.theme.fint.js"></script>
 
 <!-- Angular plugin -->
-<script type="text/javascript" src="./../js/angular-fusioncharts.min.js"></script>
+<script type="text/javascript" src="../js/fusioncharts/angular-fusioncharts.min.js"></script>
 </body>
 
 </html>
