--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -203,8 +203,8 @@
                     width="500"
                     height="400"
                     type="pie3d"
-                    datasource="{{myDataSource}}"
-            ></fusioncharts>
+                    datasource="{{myDataSource}}">
+            </fusioncharts>
         </div>
 
     </div>
@@ -223,12 +223,12 @@
 <script src="./../js/charts/Chart.min.js"></script>
 <script src="./../js/charts/angular-chart.min.js"></script>
 <!-- FusionCharts library-->
-<script type="text/javascript" src="./../js/fusioncharts.js"></script>
-<script type="text/javascript" src="./../js/fusioncharts.charts.js"></script>
-<script type="text/javascript" src="./../js/fusioncharts.theme.fint.js"></script>
+<script type="text/javascript" src="../js/fusioncharts/fusioncharts.js"></script>
+<script type="text/javascript" src="../js/fusioncharts/fusioncharts.charts.js"></script>
+<script type="text/javascript" src="../js/fusioncharts/fusioncharts.theme.fint.js"></script>
 
 <!-- Angular plugin -->
-<script type="text/javascript" src="./../js/angular-fusioncharts.min.js"></script>
+<script type="text/javascript" src="../js/fusioncharts/angular-fusioncharts.min.js"></script>
 
 </body>
 </html>
