--- a/src/main/resources/static/html/fusion.html
+++ b/src/main/resources/static/html/fusion.html
@@ -15,18 +15,22 @@
     <link rel="stylesheet"
           type="text/css"
           href="./../css/table.css"/>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.3/nv.d3.min.css"/>
 </head>
 
 <body ng-app="app">
-<div class="container"  ng-controller="AppController" ng-cloak class="ng-cloak">
+<div class="container"  ng-controller="Nvd3Controller" ng-cloak class="ng-cloak">
     <h1>{{welcome}}</h1>
 
-    <fusioncharts
-            width= "100%"
-            height= "400"
-            type= "column2d"
-            dataSource= "{{myDataSource}}">
-    </fusioncharts>
+    <!--<fusioncharts-->
+            <!--width= "100%"-->
+            <!--height= "400"-->
+            <!--type= "column2d"-->
+            <!--dataSource= "{{myDataSource}}">-->
+    <!--</fusioncharts>-->
+
+    <nvd3 options="options" data="data" class="with-3d-shadow with-transitions"></nvd3>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
@@ -35,15 +39,22 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.4/ui-bootstrap-tpls.min.js"></script>
 
-<script type="text/javascript" src="./../js/app.js"></script>
-<script type="text/javascript" src="./../js/service.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.3/nv.d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-nvd3/1.0.9/angular-nvd3.min.js"></script>
+
 <!-- FusionCharts library-->
-<script type="text/javascript" src="../js/fusioncharts/fusioncharts.js"></script>
-<script type="text/javascript" src="../js/fusioncharts/fusioncharts.charts.js"></script>
-<script type="text/javascript" src="../js/fusioncharts/fusioncharts.theme.fint.js"></script>
+<script type="text/javascript" src="./../js/fusioncharts/fusioncharts.js"></script>
+<script type="text/javascript" src="./../js/fusioncharts/fusioncharts.charts.js"></script>
+<script type="text/javascript" src="./../js/fusioncharts/fusioncharts.theme.fint.js"></script>
 
 <!-- Angular plugin -->
-<script type="text/javascript" src="../js/fusioncharts/angular-fusioncharts.min.js"></script>
+<script type="text/javascript" src="./../js/fusioncharts/angular-fusioncharts.min.js"></script>
+
+
+<script type="text/javascript" src="./../js/app.js"></script>
+<script type="text/javascript" src="./../js/nvd3.js"></script>
+<script type="text/javascript" src="./../js/service.js"></script>
 </body>
 
 </html>
