--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -17,6 +17,7 @@
           type="text/css"
           href="./../css/table.css"/>
 
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.3/nv.d3.min.css"/>
 
 </head>
@@ -83,19 +84,42 @@
                            name="search"
                            ng-value="'conference'">
 
-                    <input ng-model="conferenceName"
-                           type="text"
-                           name="conference-search"
-                           id="conference"
-                           class="form-control text-box"
-                           style="width: 50%"
-                           placeholder="Search top authors for a Conference">
-                    <span style="padding-left: 5%">Top: </span>
+                    <span>Top: </span>
                     <select name="singleSelect"
                             id="singleSelect"
-                            ng-model="topValue">
+                            ng-model="topValue"
+                            style="background-color: white;
+                                    width: 100px;
+                                    -webkit-appearance: none;
+                                    border-radius: 0px;
+                                    border-color: rgb(224, 224, 224) !important;">
                         <option ng-repeat="top in topValues" value="{{top}}">{{top}}</option>
                     </select>
+
+                    <div style="padding: 10px 0px 0px 27px; width: 84%;" class="form-control text-box">
+                        <md-autocomplete md-selected-item="conferenceName"
+                                         md-search-text="searchText"
+                                         md-items="conference in getConferences(searchText)"
+                                         md-item-text="conference"
+                                         placeholder="Search conference to see top authors"
+                                         md-no-cache="true">
+                        <md-item-template>
+                            <span md-highlight-text="searchText">{{conference}}</span>
+                        </md-item-template>
+                        <md-not-found>
+                            No matches found.
+                        </md-not-found>
+                    </md-autocomplete>
+                    </div>
+
+                    <!--<input ng-model="conferenceName"-->
+                           <!--type="text"-->
+                           <!--name="conference-search"-->
+                           <!--id="conference"-->
+                           <!--class="form-control text-box"-->
+                           <!--style="width: 50%"-->
+                           <!--placeholder="Search top authors for a Conference">-->
+
                 </div>
 
                 <div class="form-group" style="display: flex; align-items: center; justify-content: center;">
@@ -108,7 +132,9 @@
                        align="center">
                 </div>
             </form>
+
             <hr>
+
             <!--</div>
         </div> <!-- /.col-xs-12 -->
             <!--</div> <!-- /.row -->
@@ -275,6 +301,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.4/ui-bootstrap-tpls.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+
+<!-- Angular Material Library -->
+<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.3/nv.d3.min.js"></script>
