Added title of chart

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -272,6 +272,7 @@
         </div>
 
         <div ng-show="showAuthorChats">
+            <h1>Co-authors worked with in year {{selectedPaper.year}}</h1>
             <nvd3 options="options" data="data"></nvd3>
         </div>
 
