--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html style="background-color: #ffffff;" >
+<html style="background-color: #ffffff;">
 <head>
     <title>Publication Genealogy</title>
     <!--<link href="css/angular-bootstrap.css" rel="stylesheet">-->
@@ -119,33 +119,33 @@
                                          md-item-text="conference"
                                          placeholder="Search conference to see top authors"
                                          md-no-cache="true">
-                        <md-item-template>
-                            <span md-highlight-text="searchText">{{conference}}</span>
-                        </md-item-template>
-                        <md-not-found>
-                            No matches found.
-                        </md-not-found>
-                    </md-autocomplete>
+                            <md-item-template>
+                                <span md-highlight-text="searchText">{{conference}}</span>
+                            </md-item-template>
+                            <md-not-found>
+                                No matches found.
+                            </md-not-found>
+                        </md-autocomplete>
                     </div>
 
                     <!--<input ng-model="conferenceName"-->
-                           <!--type="text"-->
-                           <!--name="conference-search"-->
-                           <!--id="conference"-->
-                           <!--class="form-control text-box"-->
-                           <!--style="width: 50%"-->
-                           <!--placeholder="Search top authors for a Conference">-->
+                    <!--type="text"-->
+                    <!--name="conference-search"-->
+                    <!--id="conference"-->
+                    <!--class="form-control text-box"-->
+                    <!--style="width: 50%"-->
+                    <!--placeholder="Search top authors for a Conference">-->
 
                 </div>
 
                 <div class="form-group" style="display: flex; align-items: center; justify-content: center;">
 
-                <input type="button"
-                       id="btn-login"
-                       class="btn btn-custom btn-lg btn-block button-custom"
-                       value="Search"
-                       ng-click="searchPublication()"
-                       align="center">
+                    <input type="button"
+                           id="btn-login"
+                           class="btn btn-custom btn-lg btn-block button-custom"
+                           value="Search"
+                           ng-click="searchPublication()"
+                           align="center">
                 </div>
             </form>
 
@@ -162,7 +162,7 @@
                 <img id="SpinnerForTable"
                      style="margin-top: 10%; margin-left: 25%;"
                      src="./../images/Interwind.gif"
-                     ng-show="loadingSpinnerForTable" />
+                     ng-show="loadingSpinnerForTable"/>
 
                 <table class="responstable"
                        id="author-table"
@@ -204,11 +204,13 @@
         <img id="mySpinner"
              style="margin-top: 40%; margin-left: 25%;"
              src="./../images/Interwind.gif"
-             ng-show="loading" />
+             ng-show="loading"/>
 
         <div ng-show="infoTablePaper">
 
-            <h1>Paper Info<input style="float: right" type="button" ng-class="{'btn btn-custom btn-lg btn-block button-custom': foundCoAuthors, 'btn btn-block': !foundCoAuthors}" ng-disabled="!foundCoAuthors" value="Show Graph" ng-click="showAuthorGraph()"></h1>
+            <h1>Paper Info<input style="float: right" type="button"
+                                 ng-class="{'btn btn-custom btn-lg btn-block button-custom': foundCoAuthors, 'btn btn-block': !foundCoAuthors}"
+                                 ng-disabled="!foundCoAuthors" value="Show Graph" ng-click="showAuthorGraph()"></h1>
             <p><label><b>Title:</b> </label> {{selectedPaper.title}}</p>
             <p><label><b>Conference Name:</b> </label> {{selectedPaper.conferenceName}}</p>
             <p><label><b>Book Title:</b> </label> {{selectedPaper.bookTitle}}</p>
@@ -221,71 +223,78 @@
 
         <div ng-show="infoTableAuthor" style="overflow: scroll">
 
-            <h1>Author Info<input style="float: right" type="button" class="btn btn-custom btn-lg btn-block button-custom" value="Show Graph" ng-click="showPaperGraph()"></h1>
+            <h1>Author Info<input style="float: right" type="button"
+                                  class="btn btn-custom btn-lg btn-block button-custom" value="Show Graph"
+                                  ng-click="showPaperGraph()"></h1>
             <p><label><b>Name:</b> </label> {{selectedAuthor.name}}</p>
             <p><label><b>Affiliation:</b> </label> {{selectedAuthor.affiliation}}</p>
             <p><label><b>Web URL:</b></label>
-                <a ng-show="selectedAuthor.url !== 'None'" href={{selectedAuthor.url}} target="_blank"> {{selectedAuthor.url}} </a>
+                <a ng-show="selectedAuthor.url !== 'None'" href={{selectedAuthor.url}} target="_blank">
+                    {{selectedAuthor.url}} </a>
                 <span ng-show="selectedAuthor.url === 'None'">{{selectedAuthor.url}}</span>
             </p>
             <p><label><b>Papers:</b></label></p>
 
             <div style="height:300px; overflow:auto;">
-            <table class="responstable">
-                <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Conference Name</th>
-                    <th>Year</th>
-                </tr>
-                </thead>
-                <tbody ng-repeat="paper in selectedAuthorPapers">
-                <tr>
-                    <td>{{paper.paperTitle}}</td>
-                    <td>{{paper.confName}}</td>
-                    <td>{{paper.year}}</td>
-                </tr>
-                </tbody>
-            </table>
-            </div>
-
-            <div ng-show="selectedAuthorConferences.length > 0">
-            <p><label><b>Conferences:</b></label></p>
-            <div style="height:300px; overflow:auto;">
                 <table class="responstable">
                     <thead>
                     <tr>
-                        <th>Name</th>
                         <th>Title</th>
+                        <th>Conference Name</th>
                         <th>Year</th>
                     </tr>
                     </thead>
-                    <tbody ng-repeat="conference in selectedAuthorConferences">
+                    <tbody ng-repeat="paper in selectedAuthorPapers">
                     <tr>
-                        <td>{{conference.name}}</td>
-                        <td>{{conference.title}}</td>
-                        <td>{{conference.year}}</td>
+                        <td>{{paper.paperTitle}}</td>
+                        <td>{{paper.confName}}</td>
+                        <td>{{paper.year}}</td>
                     </tr>
                     </tbody>
                 </table>
             </div>
+
+            <div ng-show="selectedAuthorConferences.length > 0">
+                <p><label><b>Conferences:</b></label></p>
+                <div style="height:300px; overflow:auto;">
+                    <table class="responstable">
+                        <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Title</th>
+                            <th>Year</th>
+                        </tr>
+                        </thead>
+                        <tbody ng-repeat="conference in selectedAuthorConferences">
+                        <tr>
+                            <td>{{conference.name}}</td>
+                            <td>{{conference.title}}</td>
+                            <td>{{conference.year}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
 
         <div ng-show="infoTableTopCitedPapers">
 
-            <h1>Top cited papers for {{topic}}<input style="float: right" type="button" class="btn btn-custom btn-lg btn-block button-custom" value="Show Graph" ng-click="showTopCitedPapers()"></h1>
+            <h1>Top cited papers for {{topic}}<input style="float: right" type="button"
+                                                     class="btn btn-custom btn-lg btn-block button-custom"
+                                                     value="Show Graph" ng-click="showTopCitedPapers()"></h1>
             <div style="height: 100vh; overflow: scroll">
                 <div ng-repeat="paper in topCitedPapers">
                     <p><label><b>Title:</b> </label> {{paper.title}}</p>
                     <ul>
                         <li>Year: {{paper.year}}</li>
                         <li>Number of Citations: {{paper.citations}}</li>
-                        <li>Citations' List: <a ng-show="paper.citationsList !== null" href={{paper.citationsList}} target="_blank"> {{paper.citationsList}} </a>
+                        <li>Citations' List: <a ng-show="paper.citationsList !== null" href={{paper.citationsList}}
+                                                target="_blank"> {{paper.citationsList}} </a>
                             <span ng-show="paper.citationsList === null">Not available</span></li>
                         <li>URL: <a ng-show="paper.url !== null" href={{paper.url}} target="_blank"> {{paper.url}} </a>
                             <span ng-show="paper.url === null">Not available</span></li>
-                        <li>PDF link: <a ng-show="paper.pdfLink !== null" href={{paper.pdfLink}} target="_blank"> {{paper.pdfLink}} </a>
+                        <li>PDF link: <a ng-show="paper.pdfLink !== null" href={{paper.pdfLink}} target="_blank">
+                            {{paper.pdfLink}} </a>
                             <span ng-show="paper.pdfLink === null">Not available</span></li>
                         <li>Excerpt: ... {{paper.excerpt}} ...</li>
                     </ul>
@@ -295,13 +304,16 @@
 
         <div ng-show="infoTableAuthorByConference">
 
-            <h1>Top authors for {{conferenceName}}<input style="float: right" type="button" class="btn btn-custom btn-lg btn-block button-custom" value="Show Graph" ng-click="showAuthorConfGraph()"></h1>
+            <h1>Top authors for {{conferenceName}}<input style="float: right" type="button"
+                                                         class="btn btn-custom btn-lg btn-block button-custom"
+                                                         value="Show Graph" ng-click="showAuthorConfGraph()"></h1>
             <div style="height: 100vh; overflow: scroll">
                 <div ng-repeat="author in authorsForConf">
                     <p><label><b>Author:</b> </label> {{author.name}}</p>
                     <ul>
                         <li>Affiliation: {{author.affiliation}}</li>
-                        <li>URL: <a ng-show="author.url !== 'None'" href={{author.url}} target="_blank"> {{author.url}} </a>
+                        <li>URL: <a ng-show="author.url !== 'None'" href={{author.url}} target="_blank">
+                            {{author.url}} </a>
                             <span ng-show="author.url === 'None'">{{author.url}}</span></li>
                         <li>Papers published in {{conferenceName}}: {{author.paperCount}}</li>
                     </ul>
@@ -327,7 +339,7 @@
         <div ng-show="showCitationCharts">
 
             <fusioncharts
-                    style = "fill-opacity: 0 !important;"
+                    style="fill-opacity: 0 !important;"
                     width="600"
                     height="400"
                     type="column2d"
@@ -369,7 +381,6 @@
 <script type="text/javascript" src="./../js/fusioncharts/angular-fusioncharts.min.js"></script>
 
 <!--<script type="text/javascript" src="./../js/filters/authorFilter.js"></script>-->
-<script type="text/javascript" src="./../js/app.js"></script>
 <script type="text/javascript" src="./../js/nvd3.js"></script>
 <script type="text/javascript" src="./../js/service.js"></script>
 </body>
